--- a/web-component/package.json
+++ b/web-component/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "web-component",
+	"name": "web-component-monorepository",
 	"private": true,
 	"version": "0.0.0",
 	"author": {
@@ -10,7 +10,7 @@
 	"repository": {
 		"type": "git",
 		"url": "git@github.com:adbayb/poc-cross-framework-component.git",
-		"directory": "web-component"
+		"directory": "web-component/benchmark"
 	},
 	"license": "MIT",
 	"scripts": {
