feat(web-component): move adapter to its dedicated package

--- a/web-component/packages/adapter/tsconfig.json
+++ b/web-component/packages/adapter/tsconfig.json
@@ -2,6 +2,8 @@
 	"extends": "@adbayb/ts-config",
 	"compilerOptions": {
 		"jsx": "react-jsx",
+		"jsxFactory": "",
+		"jsxFragmentFactory": "",
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"target": "ES2015"
