--- a/web-component/packages/adapter/package.json
+++ b/web-component/packages/adapter/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@web-component/components",
+	"name": "@web-component/adapter",
 	"private": true,
 	"version": "0.0.0",
 	"license": "MIT",
@@ -9,20 +9,20 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"start": "pnpm watch",
-		"build": "scripts build",
-		"watch": "scripts watch",
+		"build": "microbundle --alias react=preact/compat",
+		"watch": "microbundle watch --alias react=preact/compat ",
 		"clean": "scripts clean",
 		"verify": "scripts verify",
 		"fix": "scripts fix",
 		"test": "scripts verify --only test"
 	},
-	"peerDependencies": {
-		"react": "^16.14.0 || ^17.0.0 || ^18.0.0",
-		"react-dom": "^16.14.0 || ^17.0.0 || ^18.0.0"
-	},
 	"devDependencies": {
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"@web-component/components": "workspace:*",
+		"microbundle": "0.15.0",
+		"preact": "10.7.2",
+		"preact-render-to-string": "5.2.0",
+		"react": "npm:@preact/compat@17.0.3",
+		"react-dom": "npm:@preact/compat@17.0.3",
 		"typescript": "4.6.4"
 	}
 }
