--- a/web-component/packages/adapter-vue/package.json
+++ b/web-component/packages/adapter-vue/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@web-component/adapter",
+	"name": "@web-component/vue",
 	"private": true,
 	"version": "0.0.0",
 	"license": "MIT",
@@ -9,20 +9,21 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"start": "pnpm watch",
-		"build": "microbundle --alias react=preact/compat",
-		"watch": "microbundle watch --alias react=preact/compat",
+		"build": "scripts build",
+		"watch": "scripts watch",
 		"clean": "scripts clean",
 		"verify": "scripts verify",
 		"fix": "scripts fix",
 		"test": "scripts verify --only test"
 	},
+    "peerDependencies": {
+        "vue": "^3.0.0"
+    },
+    "dependencies": {
+		"@web-component/adapter": "workspace:*"
+    },
 	"devDependencies": {
-		"@web-component/components": "workspace:*",
-		"microbundle": "0.15.0",
-		"preact": "10.7.2",
-		"preact-render-to-string": "5.2.0",
-		"react": "npm:@preact/compat@17.0.3",
-		"react-dom": "npm:@preact/compat@17.0.3",
+        "vue": "3.2.33",
 		"typescript": "4.6.4"
 	}
 }
