chore(web-component): clean benchmarks folder

--- a/primitive/packages/components/tsconfig.json
+++ b/primitive/packages/components/tsconfig.json
@@ -2,7 +2,8 @@
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"moduleResolution": "node",
-		"outDir": "dist"
+		"declarationDir": "./types",
+		"declaration": true
 	},
 	"include": ["src/**/*"]
 }
