--- a/primitive/examples/react/package.json
+++ b/primitive/examples/react/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@types/react": "17.0.43",
 		"@types/react-dom": "17.0.14",
-		"typescript": "4.6.3"
+		"typescript": "4.7.0-beta"
 	},
 	"dependencies": {
 		"react": "17.0.2",
