--- a/primitive/packages/components/package.json
+++ b/primitive/packages/components/package.json
@@ -5,18 +5,18 @@
 	"license": "MIT",
 	"source": "src/index.ts",
 	"type": "module",
-	"types": "./dist/index.d.ts",
+	"types": "./dist/types/index.d.ts",
 	"main": "./dist/index.js",
 	"exports": {
 		".": {
 			"import": {
-				"types": "./dist/index.d.ts",
+				"types": "./dist/types/index.d.ts",
 				"default": "./dist/index.js"
 			}
 		},
 		"./vue": {
 			"import": {
-				"types": "./dist/index.vue.d.ts",
+				"types": "./dist/types/index.vue.d.ts",
 				"default": "./dist/index.vue.js"
 			}
 		}
@@ -35,14 +35,14 @@
 		"vue": "^3.0.0"
 	},
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^13.3.0",
-		"@rollup/plugin-typescript": "^8.3.2",
+		"@rollup/plugin-commonjs": "22.0.0",
+		"@rollup/plugin-node-resolve": "13.3.0",
+		"@rollup/plugin-typescript": "8.3.2",
 		"react": "17.0.2",
-		"rollup": "^2.72.1",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-filesize": "^9.1.2",
-		"rollup-plugin-peer-deps-external": "^2.2.4",
-		"typescript": "4.6.4",
+		"rollup": "2.72.1",
+		"rollup-plugin-filesize": "9.1.2",
+		"tslib": "^2.4.0",
+		"typescript": "4.7.0-beta",
 		"vue": "3.2.33"
 	}
 }
