--- a/web-component/examples/next/package.json
+++ b/web-component/examples/next/package.json
@@ -18,6 +18,6 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
-    "typescript": "4.6.4"
+    "typescript": "4.7.0-beta"
   }
 }
