--- a/web-component/package.json
+++ b/web-component/package.json
@@ -25,7 +25,7 @@
 	"devDependencies": {
 		"@adbayb/scripts": "0.14.0",
 		"turbo": "1.2.8",
-		"typescript": "4.6.4"
+		"typescript": "4.7.0-beta"
 	},
 	"prettier": "@adbayb/prettier-config",
 	"eslintConfig": {
