--- a/web-component/packages/adapter/package.json
+++ b/web-component/packages/adapter/package.json
@@ -23,6 +23,6 @@
 		"preact-render-to-string": "5.2.0",
 		"react": "npm:@preact/compat@17.0.3",
 		"react-dom": "npm:@preact/compat@17.0.3",
-		"typescript": "4.6.4"
+		"typescript": "4.7.0-beta"
 	}
 }
