--- a/web-component/packages/components/package.json
+++ b/web-component/packages/components/package.json
@@ -23,6 +23,6 @@
 	"devDependencies": {
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"typescript": "4.6.4"
+		"typescript": "4.7.0-beta"
 	}
 }
