feat(primitive): create universal button component

--- a/primitive/packages/components/tsconfig.json
+++ b/primitive/packages/components/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"rootDir": "src",
 		"moduleResolution": "node",
 		"declarationDir": "./types",
 		"declaration": true
