--- a/primitive/packages/components/package.json
+++ b/primitive/packages/components/package.json
@@ -15,7 +15,7 @@
 		},
 		"./vue": {
 			"import": {
-				"types": "./dist/types/index.vue.d.ts",
+				"types": "./dist/types/index.d.ts",
 				"default": "./dist/index.vue.js"
 			}
 		}
