--- a/web-component/examples/next/package.json
+++ b/web-component/examples/next/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
     "fix": "scripts fix"
   },
   "dependencies": {
