--- a/wrapper/examples/next/package.json
+++ b/wrapper/examples/next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web-component/example-next",
+  "name": "@wrapper/example-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "@web-component/components": "workspace:*"
+    "@wrapper/components": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
