--- a/wrapper/packages/components/package.json
+++ b/wrapper/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@web-component/components",
+	"name": "@wrapper/components",
 	"private": true,
 	"version": "0.0.0",
 	"license": "MIT",
