docs: add compiler approach

--- a/primitive/examples/react/package.json
+++ b/primitive/examples/react/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@primitive/example-react",
+	"name": "@example/react",
 	"private": true,
 	"source": "src/index.tsx",
 	"main": "dist/index.cjs.js",
