--- a/wrapper/packages/custom-elements/package.json
+++ b/wrapper/packages/custom-elements/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@wrapper/vue",
+	"name": "@wrapper/custom-elements",
 	"private": true,
 	"version": "0.0.0",
 	"license": "MIT",
@@ -9,21 +9,20 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"start": "pnpm watch",
-		"build": "scripts build",
-		"watch": "scripts watch",
+		"build": "microbundle --alias react=preact/compat",
+		"watch": "microbundle watch --alias react=preact/compat",
 		"clean": "scripts clean",
 		"verify": "scripts verify",
 		"fix": "scripts fix",
 		"test": "scripts verify --only test"
 	},
-    "peerDependencies": {
-        "vue": "^3.0.0"
-    },
-    "dependencies": {
-		"@wrapper/adapter": "workspace:*"
-    },
 	"devDependencies": {
-        "vue": "3.2.33",
+		"@wrapper/components": "workspace:*",
+		"microbundle": "0.15.0",
+		"preact": "10.7.2",
+		"preact-render-to-string": "5.2.0",
+		"react": "npm:@preact/compat@17.0.3",
+		"react-dom": "npm:@preact/compat@17.0.3",
 		"typescript": "4.7.0-beta"
 	}
 }
